--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,69 @@
 
-h1{ font-family: 'Roboto', sans-serif;
-	border: 1px solid green;
+h1{ font-family: 'Playfair Display', serif;
+	border: outset hwb(244 64% 18% / 0.959);
+	background-color: hwb(229 3% 93%);
+	text-align: center;
 	padding: 5px;
 	margin: 30px;
 	font-weight: bold;
-	color: red; 
+	color: hsl(207, 86%, 72%); 
  }
+ p {
+	text-align: center ;
+ }
+ img {
+	position: flex left;
+	margin-left: auto;
+	width: 10%;
+	border: 3px dashed #49bec2c4;
+	padding: 10px;
+ }
+section {
+    margin: 20px;
+    padding: 10px;
+    border: 1px solid hwb(210 5% 95%);
+	background-color:rgba(215, 247, 243, 0.452)
+}
+h1 {
+    font-size: 32px;
+    margin-top: 0;
+}
+h2 {
+    font-size: 24px;
+    margin-top: 0;
+}
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+li {
+    margin-bottom: 10px;}
+	body {
+		font-family: Arial, sans-serif;
+		margin: 0;
+		padding: 0;
+	}
+	section {
+		margin: 20px;
+		padding: 10px;
+		border: 2px  rgb(17, 56, 42);
+	}
+	h1 {
+		font-size: 32px;
+		margin-top: 0;
+	}
+	h2 {
+		font-family: 'Playfair Display', serif;
+		font-size: 24px;
+		margin-top: 0;
+	}
+	ul {
+		font-family: 'Roboto', sans-serif, bold;
+		list-style-type: none;
+		padding: 0;
+		margin: 0;
+	}
+	li {
+		margin-bottom: 10px;
+	}
