--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,28 +1,41 @@
 
 h1{ font-family: 'Playfair Display', serif;
-	border: outset hwb(244 64% 18% / 0.959);
-	background-color: hwb(229 3% 93%);
+	border: outset #ecbc8c;
+	background-color: Sienna;
 	text-align: center;
+	text-shadow: black 3px 5px 2px;
 	padding: 5px;
 	margin: 30px;
 	font-weight: bold;
-	color: hsl(207, 86%, 72%); 
+	color: Khaki; 
  }
+ #contenedor {
+	display: -webkit-flex;
+  	display: flex;
+  }
+#principal {
+	width: 70%;
+  }
+#sidebar {
+	width: 30%;
+  }
  p {
-	text-align: center ;
+	text-align: left;
  }
  img {
 	position: flex left;
 	margin-left: auto;
-	width: 10%;
-	border: 3px dashed #49bec2c4;
+	width: 40%;
+	background-color:  DarkGoldenrod;
 	padding: 10px;
  }
 section {
-    margin: 20px;
-    padding: 10px;
-    border: 1px solid hwb(210 5% 95%);
-	background-color:rgba(215, 247, 243, 0.452)
+		
+    	margin: 20px;
+   	 	padding: 10px;
+    	border: 1px solid hwb(210 5% 95%);
+		background-color: #bdb76ba6
+		
 }
 h1 {
     font-size: 32px;
